# botw-mousecam

./: .gitignore  Cargo.toml  LICENSE  README.md  build_all.bat
botw-mousecam/: Cargo.toml  build.rs
botw-mousecam/src/: camera.rs  config.rs  focus.rs  globals.rs  i18n.rs  interceptor.asm  lib.rs  magnesis_experimental.rs  menu.rs  menu_state.rs  utils.rs
injector/: Cargo.toml
injector/src/: main.rs
position_finder/: MemAPI.cs  Program.cs  README.md  position_finder.csproj
