[workspace]
members = ["botw-mousecam", "injector"]
resolver = "2"

[workspace.dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs" }
winapi = { version = "0.3", features = ["minwindef", "libloaderapi", "consoleapi", "wincon", "xinput", "winuser", "memoryapi", "processthreadsapi", "handleapi", "winbase", "errhandlingapi", "processenv", "tlhelp32", "psapi"]}
simplelog = "0.8"
log = "0.4"
nalgebra-glm = "0.3"
termcolor = "1.1"
lazy_static = "1.4"
windows-sys = { version = "0.59", features = [
    "Win32",
    "Win32_Foundation", 
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices", 
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security"
] }
