[package]
name = "botw-mousecam"
version = "0.1.0"
authors = ["Mouse Camera Mod"]
edition = "2018"

[dependencies]
memory-rs = { workspace = true }
winapi = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
nalgebra-glm = { workspace = true }
termcolor = { workspace = true }
lazy_static = { workspace = true }
windows-sys = { version = "0.59", features = [
    "Win32",
    "Win32_Foundation", 
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices", 
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security"
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
memoffset = "0.9"

[build-dependencies]
winres = "0.1"
cc = "1.0"

[lib]
crate-type = ["cdylib"]
